[gd_scene load_steps=8 format=3 uid="uid://bgy18fhp4ab5p"]

[ext_resource type="Script" path="res://addons/dialogic/Events/LayoutEditor/layout_editor.gd" id="1_mdhmx"]
[ext_resource type="PackedScene" uid="uid://7mvxuaulctcq" path="res://addons/dialogic/Editor/Events/Fields/FilePicker.tscn" id="2_w32oh"]
[ext_resource type="PackedScene" uid="uid://43ikf44og3i3" path="res://addons/dialogic/Events/LayoutEditor/Components/StyleList.tscn" id="4_nj7j2"]

[sub_resource type="Image" id="Image_yn1sh"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 93, 93, 55, 255, 97, 97, 58, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 98, 98, 47, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 94, 94, 46, 255, 93, 93, 236, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_se6uv"]
image = SubResource("Image_yn1sh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8sor"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdd58"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[node name="Layout" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mdhmx")

[node name="VBox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MakeCustomButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Create custom scene from preset"
text = "Make Custom"
icon = SubResource("ImageTexture_se6uv")

[node name="CustomScene" type="HBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/CustomScene"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
text = "Custom layout scene:"

[node name="CustomScenePicker" parent="VBox/CustomScene" instance=ExtResource("2_w32oh")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_i8sor")
file_filter = "*.tscn"
placeholder = "DialogicDefaultScene.tscn"
resource_icon = SubResource("ImageTexture_se6uv")

[node name="NoScene" type="HBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="RichTextLabel" parent="VBox/NoScene"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "No layout scene.

This mode is intended for when you have integrated the dialogic nodes into your UI scenes and thus do not want to instance any scene for showing dialogs. 

For testing, the default scene will be used."
fit_content = true
autowrap_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 2

[node name="LayoutMode" type="OptionButton" parent="VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
item_count = 3
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Preset Mode"
popup/item_0/id = 0
popup/item_1/text = "Custom Mode"
popup/item_1/id = 1
popup/item_2/text = "No Layout Scene Mode"
popup/item_2/id = 2

[node name="MakeCustomPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mdd58")

[node name="VBoxContainer" type="VBoxContainer" parent="MakeCustomPanel"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="MakeCustomPanel/VBoxContainer"]
layout_mode = 2
text = "This allows you to save a custom copy of this preset. You can edit the resulting scene in godot, allowing you to do whatever you want with it. 
Alternatively you can:
- just customize this preset with the options below (very easy)
- use a custom scene that was created from scratch (advanced). To do this, switch to [Custom Scene Mode] and select your scene.
- integrate the dialogic nodes into your UI (advanced). To do this select [No Layout Scene Mode].

If you know what you are doing, feel free to go ahead!"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MakeCustomPanel/VBoxContainer"]
layout_mode = 2

[node name="MakeCustomButton" type="Button" parent="MakeCustomPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create custom copy"

[node name="CloseMakeCustomButton" type="Button" parent="MakeCustomPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="StyleList" parent="." instance=ExtResource("4_nj7j2")]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
size_flags_vertical = 1

[node name="PresetCustomization" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ExportsTabs" type="TabContainer" parent="PresetCustomization"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PresetCustomization"]
layout_mode = 2

[node name="ClearCustomization" type="Button" parent="PresetCustomization/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Clear all customization"
icon = SubResource("ImageTexture_se6uv")
flat = true

[node name="Label" type="Label" parent="PresetCustomization/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tip: You can use CTRL+F5 to play the current timeline!"
horizontal_alignment = 2

[node name="CustomizationResetPopup" type="ConfirmationDialog" parent="PresetCustomization"]
unique_name_in_owner = true
initial_position = 2
ok_button_text = "Yes, reset"
dialog_text = "Are you sure you want to reset all customization options? You cannot undo this."
dialog_autowrap = true

[connection signal="pressed" from="VBox/MakeCustomButton" to="." method="_on_make_custom_button_pressed"]
[connection signal="item_selected" from="VBox/HBox/LayoutMode" to="." method="_on_layout_mode_item_selected"]
[connection signal="pressed" from="MakeCustomPanel/VBoxContainer/HBoxContainer/MakeCustomButton" to="." method="_on_create_custom_copy_pressed"]
[connection signal="pressed" from="MakeCustomPanel/VBoxContainer/HBoxContainer/CloseMakeCustomButton" to="." method="_on_close_make_custom_button_pressed"]
[connection signal="pressed" from="PresetCustomization/HBoxContainer/ClearCustomization" to="." method="_on_clear_customization_pressed"]
[connection signal="confirmed" from="PresetCustomization/CustomizationResetPopup" to="." method="_on_customization_reset_popup_confirmed"]
